kit-eleves/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskmanager
  labels:
    app: taskmanager
    env: dev
